src/main/java/com/example/test/error/exception/ForbiddenException.java
package com.example.test.error.exception;

import com.example.test.error.ErrorCode;

public class ForbiddenException extends BusinessException {

    public ForbiddenException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}